# every_eval_ever

./: .gitignore  .pre-commit-config.yaml  README.md  _config.yml  check_duplicate_entries.py  eval.schema.json  eval_types.py  instance_level_eval.schema.json  instance_level_types.py  post_codegen.py  pyproject.toml  requirements.txt  validate.py  version.json
.github/ci-types/: pyproject.toml
.github/workflows/: adapter_cronjob.yml  pages.yml  publish-dataset.yml  publish.yml  regenerate_types.yml  release.yml  sync-to-hf.yml  test.yml  tests.yml  validate-data.yml
.tmp/: audit_before.json
audit/: audit_after.json  dataset_statistics.json  dataset_statistics_summary.md
data/: TEMP.ipynb  TEMP2.ipynb
docs/: CNAME  Dockerfile.docs  Dockerfile.docs.dockerignore  compose.docs.yml  index.md  nav.yml
docs/assets/: docs.css  (+1 more)
eval_converters/: README.md  __init__.py
every_eval_ever/: __init__.py  augment_canonical_identity.py  check_canonical_identity.py  check_duplicate_entries.py  cli.py  dedup.py  eval_types.py  instance_level_types.py  io.py  schema.py  upgrade_schema_version.py  validate.py  validation_core.py
instance_level_data/: GAIA_openai_azure_gpt-4.1-mini-2025-04-14_1770463617.jsonl  GAIA_openai_azure_gpt-4.1-mini-2025-04-14_aaf3a6fe-fe1e-41ad-9707-4e6f948086ca.Format.jsonl  ai2_arc_anthropic_claude-sonnet-4-0_3386284e-669c-440a-a7f0-90993d81873d.Format.jsonl  ai2_arc_ollama_qwen2.5:0.5b_1761001924.jsonl  ai2_arc_ollama_qwen2.5:0.5b_2e4e64ca-5622-42d3-9ef1-0f4e4475cdf7.Format.jsonl  pubmed_qa_openai_azure_gpt-4o-mini-2024-07-18_1751553870.jsonl  pubmed_qa_openai_azure_gpt-4o-mini-2024-07-18_6956fc23-6adf-4539-90ea-caf6b5fec1d5.Format.jsonl
misc/: dataset_statistics_summary_writer.py  eval_hierarchy.json  eval_hierarchy.md
plan/: backend-canonical-identity-plan.md
scripts/: config.py  convert_to_parquet.py  json_to_parquet.py  plot_dataset_statistics.py  upload_to_hf.py  validate_data.py
tests/: test_alpaca_eval_adapter.py  test_arc_agi_adapter.py  test_augment_canonical_identity.py  test_benchpress_adapter.py  test_check_canonical_identity.py  test_check_duplicate_entries.py  test_cli_compression.py  test_cli_inspect_uuid.py  test_community_evals_converter.py  test_dataset_statistics.py  test_dedup.py  test_docs_deployment.py  test_docs_dev_server.py  test_helm_adapter.py  test_helm_generation_args.py  test_helm_instance_level_adapter.py  test_hle_adapter.py  test_inspect_adapter.py  test_inspect_edge_cases.py  test_inspect_instance_level_adapter.py  test_io.py  test_kaggle_adapter.py  test_lexam_adapter.py  test_llm_stats_adapter.py  test_lm_eval_adapter.py  test_mmlu_pro_adapter.py  test_mt_bench_adapter.py  test_openeval_adapter.py  test_pandoc_docs_workflow.py  test_sciarena_adapter.py  test_tau_bench_adapter.py  test_upgrade_schema_version.py  test_validate.py  test_validate_compression.py  test_vals_ai_adapter.py  test_vectara_hallucination_adapter.py
tools/: build_docs.py  serve_docs.py
utils/: README.md  gh_validation_workflow.yml  swe_helpers.py
(+21349 files in other folders)
