[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "every-eval-ever"
version = "0.2.2"
description = "Every Eval Ever"
readme = "README.md"
authors = [
    { name = "EvalEval", email = "evalevalpc@googlegroups.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datamodel-code-generator[ruff]>=0.52.2",
    "duckdb>=1.5.2",
    "huggingface-hub>=0.36.0,<1.0.0",
    "jsonschema>=4.26.0,<5.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
inspect = ["inspect-ai>=0.3.160,<0.4.0"]
helm = [
    "crfm-helm>=0.5.12",
    "typer>=0.12,<1.0",
]
all = [
    "every-eval-ever[inspect]",
    "every-eval-ever[helm]",
]

[project.scripts]
every_eval_ever = "every_eval_ever.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["every_eval_ever*"]

[tool.setuptools.package-data]
every_eval_ever = ["schemas/*.json"]
[dependency-groups]
dev = [
    "datamodel-code-generator>=0.43.1",
    "pytest>=9.0.2",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
# Enable Flake8 (E, F) and isort (I) rules.
select = ["E", "F", "I"]
# Ignore specific rules, for example, E501 (line too long) as it's handled by the formatter.
ignore = [
    "E501",  # line too long
    "E402",  # Module level import not at top of file
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ty.rules]
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
